.provarCaches/00D410000011HE0EAM/objects/rstk__soconpbdev__c.object
<CustomObject>
    <description>soconpbdev__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>/*
soconpbdev_soconpbill__r.externalid__c &amp; &apos;_&apos; &amp; soconpbdev_socondev__r.externalid__c
*/

rstk__soconpbdev_soconpbill__r.rstk__externalid__c  + rstk__soconpbdev_socondev__r.rstk__socondev_sowarr__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconpbdev_socondev__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_days__c</fullName>
        <inlineHelpText>The number of days that this billing charge covers.</inlineHelpText>
        <label>Recurring Charge Days Billed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_numchgs__c</fullName>
        <inlineHelpText>The number of Recurring Charges for this device against the given Contract that was used to generate this billing record.</inlineHelpText>
        <label>Number of Charges</label>
        <summaryForeignKey>rstk__soconpbdtl__c.rstk__soconpbdtl_soconpbdev__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_rejectprocessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used internally to identify which records were Rejected successfully</description>
        <label>Reject Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_socondev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The serialized device that this record pertains to.</inlineHelpText>
        <label>Contract Covered Serialized Devices</label>
        <referenceTo>rstk__socondev__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Device Summary</relationshipLabel>
        <relationshipName>soconpbdevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_soconpbill__c</fullName>
        <label>Contract Periodic Billing</label>
        <referenceTo>rstk__soconpbill__c</referenceTo>
        <relationshipName>soconpbdevs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_taxablemnt__c</fullName>
        <inlineHelpText>The amount (of the Total Amount) that is taxable for this device against the given Contract for this billing run.</inlineHelpText>
        <label>Taxable Billing Amount</label>
        <summarizedField>rstk__soconpbdtl__c.rstk__soconpbdtl_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstk__soconpbdtl__c.rstk__soconpbdtl_taxable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__soconpbdtl__c.rstk__soconpbdtl_soconpbdev__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_taxamount__c</fullName>
        <inlineHelpText>The taxable amount (against the Total Taxable Amount) that was calculated for this device against the given Contract for this billing run.</inlineHelpText>
        <label>Total Tax Amount</label>
        <summarizedField>rstk__soconpbdtl__c.rstk__soconpbdtl_taxamount__c</summarizedField>
        <summaryForeignKey>rstk__soconpbdtl__c.rstk__soconpbdtl_soconpbdev__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdev_totamount__c</fullName>
        <inlineHelpText>The total amount billed for this device against the given Contract for this billing run.</inlineHelpText>
        <label>Total Billing Amount</label>
        <summarizedField>rstk__soconpbdtl__c.rstk__soconpbdtl_amount__c</summarizedField>
        <summaryForeignKey>rstk__soconpbdtl__c.rstk__soconpbdtl_soconpbdev__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Periodic Billing Device Summary</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbdev_soconpbill__c</columns>
        <columns>rstk__soconpbdev_rejectprocessed__c</columns>
        <columns>rstk__soconpbdev_taxablemnt__c</columns>
        <columns>rstk__soconpbdev_totamount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Periodic_Billing_Device_Summary</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbdev_soconpbill__c</columns>
        <columns>rstk__soconpbdev_socondev__c</columns>
        <columns>rstk__soconpbdev_days__c</columns>
        <columns>rstk__soconpbdev_numchgs__c</columns>
        <columns>rstk__soconpbdev_taxablemnt__c</columns>
        <columns>rstk__soconpbdev_totamount__c</columns>
        <columns>rstk__soconpbdev_taxamount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Periodic Billing Device Summary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_debug</fullName>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__formula_extid__c</columns>
        <columns>NAME</columns>
        <columns>rstk__soconpbdev_soconpbill__c</columns>
        <columns>rstk__soconpbdev_socondev__c</columns>
        <columns>rstk__soconpbdev_days__c</columns>
        <columns>rstk__soconpbdev_numchgs__c</columns>
        <columns>rstk__soconpbdev_taxablemnt__c</columns>
        <columns>rstk__soconpbdev_totamount__c</columns>
        <columns>rstk__soconpbdev_taxamount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>RS-debug</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Periodic Billing Summary by Dev</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Periodic Billing Device Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>